--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../img/3.jpg");
+    background-image: url("3.jpg");
     color: white;
     padding: 0px; 
     margin: 0px;
